Fixed styling issue causing Table Horizontal Scroll Bar not to show on small displays.

--- a/src/components/TableViewPanel/style.scss
+++ b/src/components/TableViewPanel/style.scss
@@ -90,7 +90,7 @@ div.tableViewWrapper {
     background-color: $tabBackgroundSelected;
     overflow-y: scroll;
     overflow-x: auto;
-    height: 94%;
+    height: calc(100% - (40px));
     h2.errorMessage {
       color: $tableHeaderText;
       margin-left: 4%;
